04_alb-controller/istio-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/auth-idp-cognito: '{"UserPoolArn":"arn:aws:cognito-idp:ap-northeast-2:xxxxx:userpool/us-west-2_xxxxxx","UserPoolClientId":"xxxxxbxxxxxx",
      "UserPoolDomain":"your-user-pool"}'
    alb.ingress.kubernetes.io/auth-type: cognito
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:xxxxx:certificate/xxxxxxxxxxxxx-xxxx
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1beta1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/auth-idp-cognito":"{\"UserPoolArn\":\"arn:aws:cognito-idp:ap-northeast-2:xxxxx:userpool/us-west-2_xxxxxx\",\"UserPoolClientId\":\"xxxxxbxxxxxx\", \"UserPoolDomain\":\"your-user-pool\"}","alb.ingress.kubernetes.io/auth-type":"cognito","alb.ingress.kubernetes.io/certificate-arn":"arn:aws:acm:ap-northeast-2:xxxxx:certificate/xxxxxxxxxxxxx-xxxx","alb.ingress.kubernetes.io/listen-por [...]
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2020-11-13T09:27:18Z"
  generation: 1
  labels:
    kustomize.component: istio-ingress
  name: istio-ingress
  namespace: istio-system
  resourceVersion: "6894"
  selfLink: /apis/extensions/v1beta1/namespaces/istio-system/ingresses/istio-ingress
  uid: 89edd95d-42c8-4e82-b751-a0af8ad3eb1b
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: istio-ingressgateway
          servicePort: 80
        path: /*
status:
  loadBalancer: {}
